[tool.poetry]
name = "coinprice"
version = "0.1.0"
description = "Typing Protocols demonstration"
authors = ["Oleksandr Polieno <polyenoom@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
